--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script src="bundle.js"></script>
+    
   </head>
 
   <body>
-
+    <h1>Cleverbreak</h1>
 
     <%= yield %>
 
