--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -6,6 +6,13 @@
   font-weight: bold;
 }
 
+/* .session-form-container {
+
+
+
+} */
+
+
 /* <div style="text-transform: uppercase; font-size: 16px; color: #999; font-weight: bold; line-height: 20px">
       Welcome to Splitwise
     </div> */
