--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -5,9 +5,6 @@
 }
 
 
-
-
-
 .login-btn {
   color: #1CC29F;
   background-color: white;
@@ -18,6 +15,8 @@
   text-emphasis: bold;
   float: right;
   margin-top: 16px;
+  outline: none;
+
 }
 
 .signup-btn {
@@ -25,9 +24,9 @@
   color: white;
   padding: 50 30 50 30;
   margin-left: 15px;
-  border-radius: 7%;
-  height: 50px;
-  width: 100px;
+  border-radius: 5px;
+  height: 46px;
+  width: 95px;
   text-emphasis: bold;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
@@ -35,5 +34,14 @@
   float: right;
   border: none;
   text-emphasis: bold;
-  margin-right: 80px;
+  margin-right: 85px;
+  box-shadow: 0 2px 0 0 rgba(55,59,63,0.5);
 }
+
+.signup-btn:hover {
+  box-shadow: none;
+  position: relative;
+  top: 1px;
+
+}
+
