--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -1,21 +1,36 @@
 
-.login-introduce-welcome {
-  font-size: 18px;
-  color: #999;
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-
-}
 
 .login-form-container {
   margin-top: 100px;
   display: flex;
   justify-content: center;
-  margin-left: 100px;
-
+  margin-left: 130px;
+  
 }
 
-.login-input {
+.login-header {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background-color: #1CC29F;
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+
+  height: 48px;
+}
+
+
+.login-introduce-welcome {
+  font-size: 18px;
+  color: #999;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+}
+
+
+.login-input-box {
   height: 24px;
   width: 247px;
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+
 }
