--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -6,11 +6,12 @@
   font-weight: bold;
 }
 
-/* .session-form-container {
+.session-form-container {
+  position: absolute;
+  left: 650px;
 
 
-
-} */
+}
 
 
 /* <div style="text-transform: uppercase; font-size: 16px; color: #999; font-weight: bold; line-height: 20px">
