--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -33,6 +33,7 @@
   border-right-color: rgba(0, 0, 0, 0.1);
   border-bottom-color: rgba(0, 0, 0, 0.25);
   border-left-color: rgba(0, 0, 0, 0.1);
+  padding: 4px 10px 4px 10px;
 
 
 }
@@ -44,7 +45,7 @@
   color: white;
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   height: 30px;
-  width: 70px;
+  width: 69px;
   border-width: 1px;
   border-radius: 4px;
   border-color: 1px;
@@ -58,32 +59,39 @@
 
 
 .login-introduce-welcome {
-  font-size: 18px;
+  font-size: 16px;
   color: #999;
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  text-rendering: optimizeLegibility;
   text-transform: uppercase;
   position: absolute;
-  left: 680px;
-  top: 200px;
-}
-
-.login-form-text {
-  margin-bottom: 5px;
-
+  font-weight: bold;
+  left: 700px;
+  top: 115px;
 }
 
 .login-form {
   position: relative;
   left: 700px;
-  top: 200px;
-  margin-top: 20px;
+  top: 150px;
+  width: 500px;
+}
+
+.login-form-text {
+  color: #333333;
+  font: 18px 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+
 }
 
 .login-input-box {
-  height: 24px;
+  height: 30px;
   width: 247px;
   border: 1px solid #cccccc;
   border-radius: 3px;
+  background-color: #ffffff;
+  margin-bottom: 10px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 }
 
 .login-submit {
@@ -120,7 +128,7 @@
   overflow: hidden;
   background-color: rgb(102, 102, 102);
   width: 100%;
-  height: 74px;
+  height: 114px;
 
 
 }
@@ -135,9 +143,35 @@
   left: 466px;
 }
 
-.login-footer.list {
+/* .login-footer.list {
   display: flex;
   flex-direction: row;
+
+
+} */
+
+.rights-reserved {
+  position: relative;
+  
+  margin-left: 18%;
+  line-height: 30px;
+  text-shadow: rgb(0, 0, 0) 0px -1px 0px;
+  
+
+}
+
+.new-york-city {
+  margin-top: 18px;
+  margin-bottom: 7px;
+  font-size: 24px;
+  font: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+
+
+}
+
+.copyright {
+  font-size: 18px;
+
 
 
 }
