--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -39,6 +39,7 @@
   outline: none;
   margin-left: 1px;
   cursor: pointer;
+  outline: none;
 
 }
 
@@ -60,6 +61,7 @@
   margin-right: 116px;
   margin-top: 25px;
   box-shadow: 0 2px 0 0 rgba(55,59,63,0.5);
+
 }
 
 .signup-btn:hover {
@@ -190,6 +192,19 @@
 
 }
 
+.greeting-body-img-bottom {
+  background-image:  url('./images/image-bottom.png');
+  background-size: contain;
+  z-index: 1;
+  display: block;
+  margin-left: auto;
+  margin-right: 13.6%;
+  margin-top: 8.6%;
+  height: 486px;
+  width: 325px;
+
+}
+
 .greeting-body-text {
   text-align: center;
   color: white;
@@ -207,7 +222,7 @@
   background-image:  url('./images/Greeting_background.png');
   background-size: cover;
   background-color: #8656cd;
-  height: 700px;
+  height: 639px;
   width: 100%;
   float: left;
 
