--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -7,6 +7,18 @@
   top: 0;
 }
 
+.green-logo {
+  background-image: url('./images/logo-green-back.png');
+  background-size: contain;
+  height: 32px;
+  width: 123px;
+  float: left;
+  margin-top: 9px;
+  margin-left: 248px;
+
+
+}
+
 .login-page-btns {
   position: relative;
   width: 200px;
@@ -53,7 +65,7 @@
   border-right-color: rgba(0, 0, 0, 0.1);
   border-bottom-color: rgba(0, 0, 0, 0.25);
   border-left-color: rgba(0, 0, 0, 0.1);
-  padding-bottom: 5px;
+  padding-bottom: 1px;
 
 }
 
