--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -71,6 +71,34 @@
 
 }
 
+.signup-btn-body {
+  background-color: #1CC29F;
+  color: white;
+  padding: 50 30 50 30;
+  margin-left: 15px;
+  border-radius: 5px;
+  height: 43px;
+  width: 90px;
+  text-emphasis: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  float: right;
+  border: none;
+  text-emphasis: bold;
+  margin-right: 116px;
+  margin-top: 50px;
+  box-shadow: 0 2px 0 0 rgba(55,59,63,0.5);
+
+}
+
+.signup-btn:hover {
+  box-shadow: none;
+  position: relative;
+  top: 1px;
+
+}
+
 .greeting-body {
   position: relative;
 
@@ -81,6 +109,17 @@
   background-size: cover;
   height: 500px;
   margin-top: 50px;
+
+
+}
+
+.top-title {
+  font-size: 40px;
+  color: #373b3f;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  margin-bottom: 15px; 
+
 
 }
 
