--- a/app/assets/stylesheets/signin_form.css
+++ b/app/assets/stylesheets/signin_form.css
@@ -7,12 +7,13 @@
 }
 
 .sign-in-logo {
-  position: absolute;
-  right: 1000px;
+  position: relative;
+  top: 170px;
+  right: 245px;
   background-image: url('./images/login-main-logo');
   background-size: contain;
-  height: 100px;
-  width: 100px;
+  height: 220px;
+  width: 220px;
 
 
 }
@@ -20,6 +21,7 @@
 .session-form-container {
   position: absolute;
   left: 650px;
+  bottom: 500px;
 
 
 }
