--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -1,21 +1,28 @@
 
 
 .nav-wrapper {
-  display: flex;
   background-color: #5bc5a7;
   box-shadow: 0 0 3px rgba(0,0,0,0.5);
   height: 34px;
-  flex-direction: row;
+}
+
+
+
+.nav-container {
+  display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 6px 17%;
+  
 }
 
 .nav-btn {
-  color: red;
+  background-color: transparent;
+  cursor: pointer;
 
 }
 
 .nav-right {
   order: 1;
-  align-items: flex-end;
 
 }
