--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
 
   <script type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <% if current_user %>
+    <script>
+      window.currentUser = {
+        "id": <%= current_user.id %>
+        "email": <%= current_user.email %>
+      }
+
+
+    </script>
+  <% end %>
  
 
   </head>
