--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -1,7 +1,48 @@
-.greeting-container {
+.top-title {
+    text-emphasis: bold;
+    font-size: 40px;
+    width:30%;
+    position: relative;
+    display: inline-block;
+    height: auto;
+    margin: 6% 13%;
+}
 
+.top-text {
+  text-emphasis: bold;
+  position: absolute;
+  width: 23%;
+  height: auto;
+  margin: 27px 13%;
+  font-size: 20px;
+}
+
+.signup-btn-body {
+  position: absolute;
+  background-color: #1CC29F;
+  color: white;
+  border-radius: 5px; 
+  height: 56px;
+  width: 191px;
+  text-emphasis: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  border: none;
+  box-shadow: 0 2px 0 0 rgba(55,59,63,0.5);
+  top: 350px;
+  left: 186px;
 
 }
+
+.signup-btn-body:hover {
+  box-shadow: none;
+  position: relative;
+  top: 1px;
+
+}
+
+
 
 
 .splash-nav {
@@ -71,34 +112,6 @@
 
 }
 
-.signup-btn-body {
-  background-color: #1CC29F;
-  color: white;
-  padding: 50 30 50 30;
-  margin-left: 15px;
-  border-radius: 5px;
-  height: 43px;
-  width: 90px;
-  text-emphasis: bold;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  float: right;
-  border: none;
-  text-emphasis: bold;
-  margin-right: 116px;
-  margin-top: 50px;
-  box-shadow: 0 2px 0 0 rgba(55,59,63,0.5);
-
-}
-
-.signup-btn:hover {
-  box-shadow: none;
-  position: relative;
-  top: 1px;
-
-}
-
 .greeting-body {
   position: relative;
 
@@ -107,8 +120,8 @@
 .greeting-body-top {
   background-image:  url('./images/Greeting_background.png');
   background-size: cover;
-  height: 617px;
-  margin-top: 50px;
+  background-position: center 0px;
+  height: 594px;
 
 
 }
