--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -46,8 +46,6 @@
   border-bottom-color: rgba(0, 0, 0, 0.25);
   border-left-color: rgba(0, 0, 0, 0.1);
   padding: 4px 10px 4px 10px;
-
-
 }
 
 .log-page-signup-btn {
@@ -123,6 +121,10 @@
   border-bottom-color: rgba(0, 0, 0, 0.25);
   border-left-color: rgba(0, 0, 0, 0.1);
   padding-bottom: 5px;
+}
+
+.demo-btn {
+  background-color: whitesmoke;
 
 
 }
