--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -25,18 +25,21 @@
   cursor: pointer;
   border: none;
   position: relative;
+  color: white
 
 }
 
 .nav-dropdown {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  width: 300px;
-  z-index: 2;
-  border: 1px solid rgba(0, 0, 0, 0.04);
-  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
-  z-index: 2;
-
+  border: solid rgba(0, 0, 0, 0.2) 1px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  height: 100px;
+  width: 120px;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  text-decoration: none;
 
 }
