--- a/app/assets/stylesheets/signin_form.css
+++ b/app/assets/stylesheets/signin_form.css
@@ -8,20 +8,33 @@
 
 .sign-in-logo {
   position: relative;
-  top: 170px;
+  top: 210px;
   right: 245px;
   background-image: url('./images/login-main-logo');
   background-size: contain;
   height: 220px;
   width: 220px;
-
-
 }
 
 .session-form-container {
   position: absolute;
   left: 650px;
-  bottom: 500px;
+  bottom: 400px;
+}
+
+.hi-my-name {
+  font-size: 24px;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+}
 
 
+.session-input {
+  width: 310px;
+  height: 42px;
+  font-size: 100%;
+}
+
+.email-password-field {
+  /* display: none; */
 }
