--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <% if current_user %>
     <script>
       window.currentUser = {
-        "id": <%= current_user.id %>
+        "id": <%= current_user.id %>,
         "email": <%= current_user.email %>
       }
 
