--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -29,14 +29,16 @@
 }
 
 .nav-dropdown {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  width: 300px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  align-items: stretch;
+  
+  height: 100px;
+  width: 200px;
   z-index: 2;
   border: 1px solid rgba(0, 0, 0, 0.04);
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
-  z-index: 2;
 
 
 }
