--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -123,6 +123,12 @@
   padding-bottom: 5px;
 }
 
+.error-msgs {
+  background-color: red;
+  color: black;
+
+}
+
 .demo-btn {
   background-color: whitesmoke;
 
