--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,16 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 
-  <script type="text/javascript"></script>
+  
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 
   <% if current_user %>
-    <script>
+    <script type='text/javascript'>
+
       window.currentUser = {
-        "id": <%= current_user.id %>
-        "email": <%= current_user.email %>
+        "id": <%= current_user.id %>,
+        "email": "<%= current_user.email %>"
       }
-
-
     </script>
   <% end %>
  
