--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -87,8 +87,9 @@
 
 .login-form-text {
   color: #333333;
-  font: 18px 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 17px 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   position: absolute;
+  line-height: 10px;
 
 
 }
@@ -152,7 +153,24 @@
 
 
 .demo-btn {
-  background-color: whitesmoke;
+  position: absolute;
+  margin-top: 10px;
+  background-color: #5bc5a7;
+  text-shadow: 0 -1px 0 #5bc5a7;
+  color: white;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 18px;
+  height: 40px;
+  width: 80px;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding-bottom: 5px;
+  margin-left: 10px;
 
 
 }
