--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3px 17%;
+  padding: 0px 17%;
   
 }
 
@@ -21,10 +21,33 @@
 }
 
 .nav-btn {
-  background-color: transparent;
+  /* background-color: #c45;
+  text-shadow: 0 -1px 0 #c45;
   cursor: pointer;
-  border: none;
+  border: black;
   position: relative;
+  color: white;
+  border-radius: 5px; 
+  height: 25px;
+  width: 55px;
+  text-emphasis: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 10px; */
+  margin-top: 7px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+
+
+}
+
+.nav-btn:hover {
+  box-shadow: none;
+  position: relative;
+  top: 1px;
 
 }
 
