--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -90,6 +90,7 @@
   font: 17px 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   position: absolute;
   line-height: 10px;
+  
 }
 
 .login-input-box {
@@ -100,6 +101,8 @@
   background-color: #ffffff;
   margin-bottom: 10px;
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  font-size: 20px;
+  color: grey;
 }
 
 .login-submit {
