--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -13,8 +13,8 @@
   background-color: white;
   height: 100%;
   position: inline-block;
-  width: 14vw;
-  margin-right: 10px;
+  width: 13vw;
+  /* margin-right: 10px; */
   margin-top: 3px;
 }
 
@@ -29,8 +29,62 @@
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   box-shadow: 0 0 12px rgba(0,0,0,0.2);
+}
 
+.dashboard-main-center-top {
+  background-color: rgb(238, 238, 238);;
+  border-bottom: 1px solid #ddd;
+  height: 60px;
 
+}
+
+.dashboard-main-center-top label {
+  font-size: 24px;
+  text-emphasis: bold;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin-left: 15px;
+
+}
+
+.expense-btn {
+
+  margin-top: 10px;
+  background-color: #ff652f;
+  text-shadow: 0 -1px 0 #c83400;
+  color: white;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  height: 40px;
+  width: 120px;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding-bottom: 1px;
+  margin-right: 4px;
+  margin-left: 180px;
+
+}
+
+.settle-btn {
+  background-color: #5bc5a7;
+  color: white;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+  text-shadow: 0 -1px 0 #318970;
+  height: 40px;
+  width: 110px;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding: 4px 10px 4px 10px;
+  margin-left: 3px;
 }
 
 .dashboard-main-nav-right {
@@ -39,7 +93,24 @@
   margin-left: 10px;
   margin-top: 3px;
   position: inline-block;
-  width: 14vw;
+  width: 13vw;
+  padding-top: 25px;
+}
 
+.dashboard-main-nav-right label {
+  color: gray;
+  text-emphasis: bold;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin-left: 15px;
+
+}
+
+.splitwise-purple-logo {
+  background-image: url(./images/purple-splitwise-logo.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 150px;
+  width: 150px;
+  padding-bottom: 10px;
 
 }
